--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="apple-touch-icon" href="images/logo-app.png">
 
 
-    <title>Compass</title>
+    <title>Director</title>
 
     <link rel="stylesheet" href="css/app.css">
 
